ecmascript/parser/tests/test262-error-references/fail/3990bb94b19b1071.module.js.stderr
error: Unterminated string constant
 --> $DIR/tests/test262-parser/fail/3990bb94b19b1071.module.js:1:5
  |
1 | ('\1')
  |     ^^

